--- a/package.json
+++ b/package.json
@@ -40,15 +40,15 @@
   "author": "Kiyoung Jung <im@fxpoet.com>",
   "license": "MIT",
   "peerDependencies": {
-    "vue": "^3.2.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^3.0.0",
+    "vue": "^3.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
     "@vue/test-utils": "^2.4.0",
     "bumpp": "^9.0.0",
     "jsdom": "^24.0.0",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^3.4.0",
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
     "vitest": "^1.0.0",
