--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,10 +2,6 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "noEmit": false,
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "outDir": "./dist"
-  },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "tests", "playground"]
+    "emitDeclarationOnly": true
+  }
 }
