--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,15 @@
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "allowImportingTsExtensions": true, // .ts확장자로 import 허용
     "resolveJsonModule": true,
-    "noEmit": true,
+    "noEmit": true, // 파일출력안함 (개발용)
     "declaration": true,
     "emitDeclarationOnly": false,
     "outDir": "./dist",
     "strict": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
+    "esModuleInterop": true, // ES 모듈 호환성 활성화
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
@@ -21,5 +21,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "tests"]
+  "exclude": ["node_modules", "dist", "tests", "playground"]
 }
